2006-01-19  Vlad Seryakov  <seryakov@users.sf.net>

	* include/ns.h:
	* nsd/driver.c: Fixed bug in Ns_DriverSockRequest when existing 
	structure is used. Returns NS_ERROR now if cannot parse given url. 

2006-01-18  Vlad Seryakov  <seryakov@users.sf.net>

	* sample-config.tcl: Added spooler/writer related options
	* nsd/driver.c:
	* nsd/nsd.h: Rewrote driver's spooler/writer support
	to make them cleaner and to support multiple spooler/writer
	threads for each driver. Before that, global spooler variables
	got overwritten if multiple drivers are loaded. Also, 
	simplified driver thread, removed rotating driver's list, in 
	case of usual one driver operation that was just waste of CPU
	cycles. For multiple drivers, spawning separate thread for each
	would be better solution, it can be considered for future driver 
	encancements.

2006-01-17  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/driver.c: Improved Writer thread support, now it is 
        possible to have multiple writer thread for better performance.
        * nstread/thread.c: Make Ns_ThreadSetName to accept sprintf-like 
        variable list of arguments
	* nsd/sched.c:
	* nsd/tcljob.c
	* nsd/queue.c:
	* nsd/task.c: Changed setting thread name using new sprintf-like
	arguments

2006-01-16  Bernd Eidenschink  <eide@users.sourceforge.net>

	* tests/ns_base64encode.test: Basic tests for ns_base64encode
	and ns_base64decode
	* nsd/uuencode.c: Fixed appending of extra newline in certain
	line break situations. Fixes Bug #1407112.

2006-01-15  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/driver.c:
	* nsd/connio.c:
	* nsd.nsd.h: This is experimental feature to use separate writer
	thread for sending large files to multiple clients. By default it 
	is disabled so nobody should be affected by this feature. Still need
	more testing but can be very usefull, keeping it in CVS makes it easier 
	to track then in local copy, i keep loosing local modifications
	all the time.
	